@startuml
interface IBookCleaningJobView {
    +  <<event>> Search : EventHandler? 
    +  <<event>> Add : EventHandler? 
    +  <<event>> Edit : EventHandler? 
    +  <<event>> View : EventHandler? 
    +  <<event>> Delete : EventHandler? 
    +  <<event>> SortRequested : EventHandler<SortRequestEventArgs>? 
    +  <<event>> DateChanged : EventHandler? 
    + SearchText : string <<get>> <<set>>
    + DataGridText : string <<get>> <<set>>
    + AddEnabled : bool <<get>> <<set>>
    + DeleteEnabled : bool <<get>> <<set>>
    + ViewMode : bool <<get>> <<set>>
    + DisableAll() : void
    + EnableAll() : void
    + ShowMessageBox(text:string, caption:string, buttons:MessageBoxButtons) : DialogResult
}
class "IDisplayView`1"<T> {
}
"IDisplayView`1" "<DisplayCleaningJobModel>" <|-- IBookCleaningJobView
IChildView <|-- IBookCleaningJobView
IBookCleaningJobView --> "Date" DateTime
IBookCleaningJobView --> "SelectedItem" DisplayCleaningJobModel
@enduml
